@startuml TechnoTaller Domain Classes

!define ABSTRACT abstract
!define INTERFACE interface

' ============ CLASES DEL DOMINIO ============

class TechnicalService {
    - id: string
    - name: string
    - description: string
    - price: number
    - _active: boolean
    --
    + activate(): void
    + deactivate(): void
    + get active(): boolean
    + static fromRow(row): TechnicalService
}

class Appointment {
    - id: string
    - serviceId: string
    - customerName: string
    - phone: string
    - date: Date
    - _status: AppointmentStatus
    - createdAt: Date
    --
    + confirm(): void
    + cancel(): void
    + complete(): void
    + get status(): AppointmentStatus
    + static fromRow(row): Appointment
}

class WorkOrder {
    - id: string
    - guideNumber: string
    - customerId: string | null
    - technicianId: string | null
    - deviceBrand: string
    - deviceModel: string
    - deviceSerial: string
    - problemDescription: string
    - accessories: string | null
    - _currentStatus: OrderStatus
    - createdAt: string
    --
    + canTransitionTo(status): boolean
    + transitionTo(status): void
    + get currentStatus(): OrderStatus
    + static fromRow(row): WorkOrder
}

class Product {
    - id: string
    - sku: string
    - name: string
    - description: string
    - imageUrl: string | null
    - categoryId: string | null
    - purchasePrice: number
    - salePrice: number
    - _stock: number
    - _active: boolean
    --
    + addStock(quantity): void
    + removeStock(quantity): void
    + activate(): void
    + deactivate(): void
    + get stock(): number
    + get active(): boolean
    + get available(): boolean
    + static fromRow(row): Product
}

class Part {
    - id: string
    - name: string
    - sku: string
    - _stock: number
    - purchasePrice: number
    - salePrice: number
    --
    + discount(quantity): void
    + restock(quantity): void
    + get stock(): number
    + static fromRow(row): Part
}

class Customer {
    - id: string
    - email: string | null
    - fullName: string
    - phone: string | null
    - createdAt: string
}

class Technician {
    - id: string
    - fullName: string
    - email: string
    - phone: string | null
    - active: boolean
    - createdAt: string
}

class AuthUser {
    - id: string
    - email: string
    - role: Role
    - fullName: string
    - phone: string | null
}

class Diagnostic {
    - id: string
    - workOrderId: string
    - technicianId: string
    - observations: string
    - faults: string
    - recommendedActions: string
    - createdAt: string
}

class Warranty {
    - id: string
    - workOrderId: string
    - periodDays: number
    - expiresAt: string
    - status: WarrantyStatus
    - createdAt: string
    - isActive: boolean
}

class Notification {
    - id: string
    - workOrderId: string
    - toEmail: string
    - type: string
    - status: NotificationStatus
    - sentAt: string | null
    - createdAt: string
}

class AuditLog {
    - id: string
    - userId: string | null
    - action: string
    - entity: string
    - entityId: string | null
    - details: unknown
    - createdAt: string
}

class InventoryMovement {
    - id: string
    - productId: string
    - type: InventoryMovementType
    - quantity: number
    - reason: string
    - userId: string
    - createdAt: string
}

class StatusHistoryEntry {
    - id: string
    - fromStatus: OrderStatus
    - toStatus: OrderStatus
    - userId: string
    - createdAt: string
}

interface INotifier {
    + send(message: NotificationMessage): Promise<void>
}

' ============ RELACIONES ============

' Asociaciones simples
WorkOrder "1" -- "0..1" Customer : "tiene cliente"
WorkOrder "1" -- "0..1" Technician : "asignado a"
Appointment "N" -- "1" TechnicalService : "reserva"
Diagnostic "N" -- "1" Technician : "realizado por"
Warranty "1" -- "1" WorkOrder : "vinculada a"
Notification "N" -- "1" WorkOrder : "relacionada con"
AuditLog "N" -- "0..1" AuthUser : "registrada por"

' Agregaciones (colecciones de entidades relacionadas)
WorkOrder "1" o-- "N" Diagnostic : "contiene"
WorkOrder "1" o-- "N" StatusHistoryEntry : "historial"
WorkOrder "1" o-- "N" Notification : "genera"
Customer "1" o-- "N" WorkOrder : "tiene órdenes"
Customer "1" o-- "N" Appointment : "realiza"
Technician "1" o-- "N" WorkOrder : "trabaja en"
Technician "1" o-- "N" Diagnostic : "realiza"
Product "1" o-- "N" InventoryMovement : "movimientos"
Part "1" o-- "N" WorkOrder : "utilizado en"

' Composición (atributos privados que forman parte integral)
WorkOrder "1" *-- "1" OrderStatus : "_currentStatus"
Appointment "1" *-- "1" AppointmentStatus : "_status"
Product "1" *-- "1" Stock : "_stock"
Part "1" *-- "1" Stock : "_stock"

' Dependencias (usa)
Notification "N" --> "1" INotifier : "usa para enviar"

' Tipos relacionados
WorkOrder "1" -- "N" Part : "usa"

' ============ ENUMERACIONES Y TIPOS ============

enum AppointmentStatus {
    PENDIENTE
    CONFIRMADA
    CANCELADA
    COMPLETADA
}

enum OrderStatus {
    INGRESADO
    EN_REVISION
    ESPERANDO_REPUESTO
    EN_REPARACION
    REPARADO
    LISTO_PARA_ENTREGA
    ENTREGADO
}

enum WarrantyStatus {
    VIGENTE
    VENCIDA
}

enum NotificationStatus {
    PENDIENTE
    ENVIADA
    FALLIDA
}

enum Role {
    CLIENTE
    TECNICO
    ADMINISTRADOR
}

enum InventoryMovementType {
    IN
    OUT
}

note right of AppointmentStatus
    Estados de una cita
    Transiciones:
    pendiente → confirmada/cancelada
    confirmada → completada/cancelada
end note

note right of OrderStatus
    Estados de orden de trabajo
    Máquina de estados OCP
    INGRESADO → EN_REVISION → 
    (ESPERANDO_REPUESTO | EN_REPARACION) →
    REPARADO → LISTO_PARA_ENTREGA → ENTREGADO
end note

note bottom of WorkOrder
    Entidad Agregada Central
    Contiene toda la lógica de transición
    Patrón: State Machine + Aggregate
end note

note bottom of Appointment
    Máquina de Estados
    Validaciones en métodos
    confirm() verifica no estar cancelada
    complete() solo si está confirmada
end note

note bottom of Product
    Inventario administrado
    Stock privado con getters
    Métodos validados: addStock, removeStock
    Computed property: available
end note

note bottom of Part
    Similar a Product
    Pero más simple (sin imageUrl, categoryId)
    Métodos: discount, restock
end note

' ============ LEYENDA ============

note left of TechnicalService
    LEYENDA:
    ◆ Agregación (colección débil)
    * Composición (integral)
    -- Asociación (referencia)
    --> Dependencia (usa)
end note

@enduml
